--- a/elements/nav.module.scss
+++ b/elements/nav.module.scss
@@ -58,6 +58,7 @@
 
             .sub-1 {
                 position: absolute;
+                padding: 1rem 1rem 0.5rem 0;
             }
 
             li:hover .sub-menu {
